# lucen

./: .editorconfig  .gitattributes  .gitignore  AI_USAGE_GUIDELINE_FOR_PR.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LIMITATIONS.md  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  STABILITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  nightly.yml  release.yml  scorecard.yml  security.yml
docs/: api.md  architecture.md  glossary.md  index.md  pragmas.md
docs/adr/: 0001-quiet-fallback-is-the-default.md  0003-trust-is-restricted-and-only-proof-downgrades.md  0004-branch-merge-conservative-by-default.md  0005-nested-region-guard-is-silent.md  0006-reduction-order-is-sequential-equivalent.md  0007-chunk-is-the-unit-of-dispatch.md  0008-privatize-and-commit.md  0009-wavefront-replaces-fork-join.md  0010-profitability-gate-and-probe.md  0011-thread-timeouts-are-cooperative.md  0013-interpreter-independent-routing.md  0014-native-orchestration-by-reference.md  README.md
docs/formal/: PrivatizeCommit.cfg  PrivatizeCommit.tla  README.md  Wavefront.cfg  Wavefront.tla
docs/implementation/: lucen_engineering_doc.md
docs/paper/: lucen.md
docs/spec/: lucen_technical_spec.md
examples/: 03_recognized_dag_reduction.py  demo_workload.py  lucen.toml
lucen/: __init__.py  import_hook.py
lucen/analysis/: analyzer.py  purity.py  rewriter.py  scanner.py  selector.py  trust.py
lucen/clauses/: __init__.py  registry.py
lucen/cli/: __init__.py  explain.py  profile.py  run.py
lucen/codegen/: __init__.py  artifact.py  generator.py
lucen/execution/: _accel.py  affinity.py  dispatch.py  early_exit.py  nested_guard.py  planning.py  preflight.py  process_backend.py  runtime.py  wavefront.py
lucen/support/: cache.py  config.py  costmodel.py  errors.py
lucen_core/: Cargo.toml
lucen_core/src/: lib.rs
packaging/pure/: pyproject.toml
tests/: conftest.py
tests/benchmarks/: add_native.py  bench.py  bench_helpers.py  bench_vs_hand.py  budgets.json  compare_baseline.py  gen_benchmark_md.py  hand_workers.py  matrix_bench.py  routing_check.py  spike.py
tests/benchmarks/results/: py310.json  py311.json  py312.json  py313.json  py314.json  py314t.json  py39.json
tests/benchmarks/results/exp/: py310.json  py311.json  py312.json  py313.json  py314.json  py314t.json  py39.json
tests/formal/: test_model_check.py
tests/integration/: test_end_to_end.py  test_examples.py  test_perf_regression.py
tests/property/: conftest.py  test_differential.py  test_frontend_fuzz.py  test_program_fuzz.py
tests/unit/: test_accel.py  test_analyzer.py  test_branch_sensitive.py  test_buffer_fast_path.py  test_classification_edge.py  test_clause_behavior.py  test_clause_registry.py  test_codegen.py  test_codegen_robust.py  test_control_flow.py  test_dispatch.py  test_early_exit.py  test_equivalence.py  test_error_matrix.py  test_errors.py  test_explain.py  test_explain_gate_consistency.py  test_import_hook.py  test_invariants.py  test_nested_mutation.py  test_process_backend.py  test_profile_cli.py  test_purity.py  test_races.py  test_resolve_and_backend.py  test_rewriter.py  test_scanner.py  test_scanner_fuzz.py  test_selector.py
