[package]
name = "lucen_core"
version = "1.0.0"
edition = "2021"
description = "Native acceleration core for Lucen: write-set audits and reduction folds."
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
